fixed scrollbar

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,8 @@
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 15px 20px -6px #999;
     font-family: sans-serif;
+    position: fixed;
+    top :0;
 }
 
 .mapBtn{
@@ -41,5 +43,9 @@
  }
 
  #view {
-     padding-top: 45px;
+     position: fixed;
+     top: 45px;
+     bottom: 0;
+     overflow: auto;
+     width:100%;
  }
