--- a/public/views/map/css/map.css
+++ b/public/views/map/css/map.css
@@ -71,8 +71,6 @@ body {
     margin-left: -15px;
     margin-right: -15px;
     margin-bottom :-20px;
-    height:85%;
-    overflow: auto;
 }
 
 .categoryLabel {
