--- a/public/views/questionnaire/css/questionnaire.css
+++ b/public/views/questionnaire/css/questionnaire.css
@@ -81,12 +81,37 @@
     box-shadow: 0 15px 20px -6px #999;
 }
 
+@media screen and (max-width: 992px) {
+    .lastAnswers{
+        cursor: pointer;
+        font-size: 40px;
+        text-align:center;
+        box-shadow: 0 3px 3px -3px #999;
+        height: 100px;
+        min-height: 100px;
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+
+    .answers{
+        cursor: pointer;
+        font-size: 40px;
+        text-align:center;
+        box-shadow: 0 3px 3px -3px #999;
+        height: 100px;
+        min-height: 100px;
+        margin-top: 25px;
+        margin-bottom: 25px;
+    }
+}
+
 .lastAnswers{
     cursor: pointer;
     font-size: 20px;
     text-align:center;
     box-shadow: 0 3px 3px -3px #999;
     height: 100px;
+    min-height: 100px;
     margin-top: 25px;
     margin-bottom: 25px;
 }
@@ -97,6 +122,7 @@
     text-align:center;
     box-shadow: 0 3px 3px -3px #999;
     height: 100px;
+    min-height: 100px;
     margin-top: 25px;
     margin-bottom: 25px;
 }
@@ -125,4 +151,8 @@
     background: white url("../images/loading.gif");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#questionnaireView{
+    padding-top: 45px;
 }
